# plutusfi-mm-backend

./: .gitignore  README.md  celery.sh  makefile  manage.py  pyproject.toml  redis.yml  requirements.txt
.github/workflows/: django.yml
apps/account/: apps.py  models.py
apps/account/migrations/: 0001_initial.py  0002_profile_picture.py
apps/account/tests/: factories.py  tests.py
apps/auth/: serializers.py
apps/auth/api/: urls.py  views.py
apps/auth/tests/: tests.py
apps/autotrade/: apps.py  serializers.py  tasks.py
apps/autotrade/api/: urls.py  views.py
apps/autotrade/bigone/: autotrade_bigone.py  bigone_tasks.py
apps/autotrade/db/: models.py
apps/autotrade/migrations/: 0001_initial.py  0002_alter_marketmakerbot_pair_token.py  0003_remove_marketmakerbotorderhistory_spreed_and_more.py  0004_marketmakerbot_photo.py  0004_marketmakerbotautotradequeue_exec_ref_price_and_more.py  0005_alter_marketmakerbot_photo.py
apps/autotrade/models/: models.py
apps/autotrade/tests/: factories.py  tests.py
apps/bid/: apps.py  serializers.py
apps/bid/api/: urls.py  views.py
apps/bid/tests/: factories.py  tests.py
apps/bookfiller/: apps.py  serializers.py
apps/bookfiller/api/: urls.py  views.py
apps/bookfiller/biconomy/: biconomy_bookfiller.py
apps/bookfiller/bigone/: bigone_bookfiller.py  bigone_market_creator.py
apps/bookfiller/db/: models.py
apps/bookfiller/migrations/: 0001_initial.py  0002_alter_bookfiller_pair_token_and_more.py
apps/bookfiller/models/: models.py
apps/bookfiller/tests/: factories.py  (+1 more)
apps/bot/: serializers.py  tasks.py
apps/dashboard/: tasks.py
apps/exchange/: serializers.py
apps/exchange_api/: apps.py  serializers.py
apps/geneses/: apps.py  serializers.py
apps/orderLimit/: apps.py  serializers.py
apps/token/: apps.py  serializers.py
marketmaker/: asgi.py  celery.py  log_auto_trade.ini  log_root.ini  queue.py  urls.py  wsgi.py
marketmaker/settings/: base.py  dev.py
(+66 files in other folders)
