[tool.poetry]
name = "plutusfi-mm-backend"
version = "0.0.1"
description = ""
authors = ["Carlos Eduardo <suportebeloj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "^3.13.1"
black = "^22.6.0"
Django = "^4.0.6"
django-environ = "^0.9.0"
mysqlclient = "^2.1.1"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
